feat: query Mongo metadata for CPF search